--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,12 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
-group 'uj.java.gvt'
-version '1.0'
+project.setProperty("mainClassName", "discord.bot.App")
+
+version 1.0
 
 sourceCompatibility = JavaVersion.VERSION_17
 
@@ -15,7 +17,7 @@ repositories {
 
 dependencies {
     // Use JUnit Jupiter for testing.
-    // testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
 
     // This dependency is used by the application.
     // implementation 'com.google.guava:guava:30.1.1-jre'
@@ -29,23 +31,17 @@ dependencies {
 //     mainClass = 'discord.bot.App'
 // }
 
-tasks.named('test') {
+test {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
 }
 
+task stage(dependsOn: ['build','shadowJar', 'clean', 'test'])
+build.mustRunAfter clean
+build.mustRunAfter test
 
-tasks.register('uberJar', Jar) {
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    manifest {
-        attributes(
-                'Implementation-Title': project.name,
-                'Implementation-Version': project.version,
-                'Main-Class': 'discord.bot.App')
-    }
-    from sourceSets.main.output
-    dependsOn configurations.runtimeClasspath
-    from {
-        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
+jar {
+    manifest{
+        attributes 'Class-Path': 'libs/bocislaw-1.0-all.jar', 'Main-Class': 'discord.bot.App'
     }
 }
