--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,16 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
-project.setProperty("mainClassName", "discord.bot.App")
+application {
+    mainClass = 'discord.bot.App'
+}
 
 version 1.0
 
 // sourceCompatibility = JavaVersion.VERSION_17
-java.runtime.version = 17
+apply plugin: 'java'
+sourceCompatibility = 17
+targetCompatibility = 17
 
 repositories {
     // Use Maven Central for resolving dependencies.
