--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,9 +11,9 @@ application {
 version 1.0
 
 // sourceCompatibility = JavaVersion.VERSION_17
-apply plugin: 'java'
-sourceCompatibility = 17
-targetCompatibility = 17
+// apply plugin: 'java'
+// sourceCompatibility = 17
+// targetCompatibility = 17
 
 repositories {
     // Use Maven Central for resolving dependencies.
